--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=config-default
+spring.application.name=config-default1
 
 eureka.instance.prefer-ip-address=true
 eureka.client.fetch-registry=true
